<resources>
    <string name="app_name">LetYouKnow</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="step_2_of_4">Step 2 of 4</string>
    <string name="step_3_of_4">Step 3 of 4</string>
    <string name="deal_summary">Deal Summary</string>
    <string name="google_web_client_id">1041344513800-0vpjta95n0sqcu7algdb1fupcmbeihjq.apps.googleusercontent.com</string>
    <string name="samsung_pay_service_id">83cea3be495f42ceaae313</string>
    <string name="spay_debug_api_key">6acddb95270f48f5879c078e3000a262</string>
    <string name="facebook_app_id">2719149108369502</string>
    <string name="fb_login_protocol_scheme">fb2719149108369502</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="password_required">Password*</string>
    <string name="password_colon">Password:</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_required">Current Password*</string>
    <string name="sign_in">SIGN IN</string>
    <string name="find_my_deal">FIND MY DEAL</string>
    <string name="proceed_with_your_deal">PROCEED WITH YOUR DEAL</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="submit">SUBMIT</string>
    <string name="save">SAVE</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create an account</string>
    <string name="edit_login">Edit Login</string>
    <string name="edit_my_information">Edit My Information</string>
    <string name="by_registering">By registering you agree to LetYouKnow\'s \nTerms and Conditions and Privacy Policy</string>
    <string name="by_signing_up">By signing up, you agree to LetYouKnow\'s \nTerms and Conditions and Privacy Policy.</string>
    <string name="by_login">By signing up, you agree to LetYouKnow\’s \nTerms and Conditions and Privacy Policy</string>
    <string name="remember_me">Remember me</string>
    <string name="first_name">First Name</string>
    <string name="first_name_required">First Name*</string>
    <string name="full_name_required">Full Name*</string>
    <string name="enter_valid_first_name">Enter Valid First Name</string>
    <string name="middle_name">MI</string>
    <string name="last_name">Last Name</string>
    <string name="enter_valid_last_name">Enter Valid Last Name</string>
    <string name="enter_valid_middle_name">Enter Valid Middle Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="enter_valid_City">Enter Valid City</string>
    <string name="enter_valid_zipcode">Enter Valid Zip Code</string>
    <string name="last_name_required">Last Name Required</string>
    <string name="last_name_req">Last Name*</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="city_required">City*</string>
    <string name="forgot_user_id">Forgot User ID?</string>
    <string name="forgot_user_name"><u>Forgot User Name?</u></string>
    <string name="address_line_1">Address 1</string>
    <string name="address_line_1_required">Address 1*</string>
    <string name="address_line_2">Address 2</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="zip_code_required">Zip Code*</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_required">Phone Number*</string>
    <string name="user_name_required">User Name*</string>
    <string name="email_address">Email</string>
    <string name="email_address_required">Email*</string>
    <string name="email">Email</string>
    <string name="email_colon">Email:</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_email_required">Confirm Email*</string>
    <string name="confirm_user_id">Confirm User ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_required">Confirm Password*</string>
    <string name="filter">Filter</string>
    <string name="any">ANY</string>
    <string name="none">NONE</string>
    <string name="add_payment"> Would you like to add a payment method?</string>
    <string name="on_the_go">On The Go,</string>
    <string name="on_your_terms">On Your Terms</string>
    <string name="tm"><Sup>TM</Sup></string>
    <string name="sign_up">Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="new_password_required">New Password*</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_new_password_required">Confirm New Password*</string>
    <string name="enter_email_address">Enter the email address associated with your account to receive a link to reset your password.</string>
    <string name="payment_options">Payment Options</string>
    <string name="payment_info">Payment Info</string>
    <string name="select_cards_for_payment">Select Cards for Payment</string>
    <string name="hint_credit_expire_date">MM/YY</string>
    <string name="add_more"><u>Add More</u></string>
    <string name="expire_date">Expires Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_number">Card Number</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="yes_send_me_promotinal_emails_from_letyouknow">Yes, send me promotional emails from LetYouKnow.</string>
    <string name="yes_text_me_promo">Yes, text me promo alerts (Msg&amp;Data Rates May Apply).</string>
    <string name="zip_code_colon">Zip Code:</string>
    <string name="we_want_you_to_be">We want you to be completely satisfied with your car buying experience. Please read the important information below.</string>
    <string name="we_want_you_to_be_completely_satisfied_with_your_car_buying_experience_please_read_the_important_information_here">We want you to be completely satisfied with your car buying experience. Please read the important information here.</string>
    <string name="i_have_read_accept">I have read, accept, and agree to abide by %1$s\'s Terms and Conditions and Privacy Policy.</string>
    <string name="i_certify_that">I certify that I have read, understand and agree to above statements and %1s\'s full Terms and Conditions  and  Privacy Policy.</string>
    <string name="initial_here_to_accept">Initial here to Accept</string>
    <string name="enter_user_id">Enter UserID</string>
    <string name="enter_user_name">Enter UserName</string>
    <string name="enter_email_address_vali">Enter EmailAddress</string>
    <string name="financing_option_required">Financing Option Required</string>
    <string name="search_radius_required">Search Radius Required</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="password_length_minimum_6_characters">Password length minimum 6 characters</string>
    <string name="password_must_be_8_16_characters">Password must be 8–16 characters in length and contain at least:<br /> uppercase letter<br /> lowercase letter<br /> number<br />1 special character (@$!%*?#&amp;^~)</string>
    <string name="password_hint">Password Hint</string>
    <string name="enter_firstname">Enter FirstName</string>
    <string name="enter_addressline1">Address field is required</string>
    <string name="address1_must_be_minimum_three_characters">Address1 must be minimum 3 characters</string>
    <string name="enter_addressline2">Enter AddressLine2</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_zipcode">Enter Zip Code</string>
    <string name="enter_phonenumber">Enter PhoneNumber</string>
    <string name="enter_valid_phone_number">Enter valid PhoneNumber</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="did_n_t_match_email">Email and Confirm Email didn\'t match </string>
    <string name="did_n_t_match_password">Password and Confirm Password didn\'t match</string>
    <string name="exterior_color_colon">Exterior Color: </string>
    <string name="exterior_color">Exterior Color</string>
    <string name="interior_color_colon">Interior Color: </string>
    <string name="interior_color">Interior Color</string>
    <string name="submit_my_deal">Submit My Deal</string>
    <string name="card_holder_name_enabled">Display card holder name</string>
    <string name="combo_card_enabled">Request combo card</string>
    <string name="request_cpf">Request CPF</string>
    <string name="payment_cryptogram">DSRP Cryptogram type</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="country">Country</string>
    <string name="card_brand1">VI</string>
    <string name="card_brand2">MC</string>
    <string name="card_brand3">AX</string>
    <string name="card_brand4">DS</string>
    <string name="display_option_addressee">ADDRESSEE</string>
    <string name="display_option_address">ADDRESS</string>
    <string name="display_option_phone_number">PHONE_NUMBER</string>
    <string name="display_option_email">EMAIL</string>
    <string name="card_brand_control_title">CARD/BRAND CONTROLS</string>
    <string name="card_brand_control_desc">Controls for allowed brands, combo card, etc</string>
    <string name="enable">enable</string>
    <string name="shipping_address_display_option">Shipping Address Display Options</string>
    <string name="shipping_address_from_partner_title">SHIPPING ADDRESS FROM PARTNER</string>
    <string name="customer_name">Name</string>
    <string name="address_line1">Address line 1</string>
    <string name="address_line2">Address line 2</string>
    <string name="return_shipping_validation">Valid Shipping address?</string>
    <string name="return_billing_validation">Valid Billing address?</string>
    <string name="custom_error_message_for_billing">This is custom error message for billing.</string>
    <string name="custom_error_message_for_shipping">This is custom error message for shipping.</string>
    <string name="partner_defined_shipping_address_name">Adam</string>
    <string name="partner_defined_shipping_address_line1">708</string>
    <string name="partner_defined_shipping_address_line2">1st Avenue SE</string>
    <string name="partner_defined_shipping_address_city">Bellevue</string>
    <string name="partner_defined_shipping_address_state">WA</string>
    <string name="partner_defined_shipping_address_zip_code">98005</string>
    <string name="partner_defined_shipping_address_phone">+18002563789</string>
    <string name="partner_defined_shipping_address_email">sample@h.com</string>
    <string name="billing_address">Billing Address</string>
    <string name="billing_address_controls">Billing Address Controls</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_address_controls">Shipping Address Controls</string>
    <string name="allowed_card_brand_desc">Allowed card brands</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="standard_shipping_free">Standard shipping (Free)</string>
    <string name="two_days_shipping">2 days shipping (0.1$)</string>
    <string name="one_day_shipping">1 day shipping (0.2$)</string>
</resources>