<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/control_title_text"
            android:text="@string/shipping_address_controls" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/shipping_address_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/shipping_address" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_top"
            android:background="@drawable/rectangle_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:text="@string/return_shipping_validation" />

            <Spinner
                android:id="@+id/return_shipping_address_error_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/return_shipping_address_error_type" />

            <EditText
                android:id="@+id/custom_error_message_for_shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_error_message_for_shipping"
                android:visibility="gone"
                tools:ignore="TextFields" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/padding_top"
            android:background="@drawable/rectangle_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/shipping_method"
                android:textSize="@dimen/table_row_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shipping_method_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:textSize="@dimen/table_row_text_size" />

            <RadioGroup
                android:id="@+id/shipping_method_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/shipping_method_standard_shipping_free">

                <RadioButton
                    android:id="@+id/shipping_method_standard_shipping_free"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/standard_shipping_free" />

                <RadioButton
                    android:id="@+id/shipping_method_two_days_shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_days_shipping" />

                <RadioButton
                    android:id="@+id/shipping_method_one_day_shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_day_shipping" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shipping_address_display_option_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_top"
            android:background="@drawable/rectangle_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:text="@string/shipping_address_display_option" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/display_option_addressee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/display_option_addressee"
                    android:textColor="#003366"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/display_option_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/display_option_address"
                    android:textColor="#003366"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/display_option_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/display_option_phone_number"
                    android:textColor="#003366"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/display_option_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/display_option_email"
                    android:textColor="#003366"
                    android:textSize="12sp" />
            </TableRow>
        </LinearLayout>

        <TableLayout
            android:id="@+id/shipping_address_from_partner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/control_title_text"
                android:text="@string/shipping_address_from_partner_title" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text|textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:text="@string/partner_defined_shipping_address_name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address_line1"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/address_line1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text|textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:text="@string/partner_defined_shipping_address_line1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address_line2"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/address_line2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text|textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:text="@string/partner_defined_shipping_address_line2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/city"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text|textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:text="@string/partner_defined_shipping_address_city" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/state"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textCapCharacters|textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:text="@string/partner_defined_shipping_address_state" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zip_code"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text|textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:text="@string/partner_defined_shipping_address_zip_code" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:prompt="@string/select_your_country" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_number"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text="@string/partner_defined_shipping_address_phone" />
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textEmailAddress|textNoSuggestions|textVisiblePassword"
                    android:singleLine="true"
                    android:text="@string/partner_defined_shipping_address_email" />
            </TableRow>
        </TableLayout>

        <include layout="@layout/category_divider" />
    </TableLayout>
</layout>