<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    style="@style/control_title_text"
                    android:text="@string/card_brand_control_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_brand_control_desc" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enable" />

            <CheckBox
                android:id="@+id/card_brand_control_enable"
                android:layout_gravity="center|end" />
        </TableRow>

        <LinearLayout
            android:id="@+id/card_brand_control_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_8dp"
                    android:text="@string/allowed_card_brand_desc" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/visa_brand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_brand1" />

                    <CheckBox
                        android:id="@+id/master_brand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_brand2" />

                    <CheckBox
                        android:id="@+id/amex_brand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_brand3" />

                    <CheckBox
                        android:id="@+id/discover_brand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_brand4" />
                </TableRow>
            </LinearLayout>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/display_card_holder_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/card_holder_name_enabled" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/request_combo_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/combo_card_enabled" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/request_cpf_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/request_cpf" />

            </TableRow>

            <TableRow
                android:id="@+id/payment_cryptogram_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/payment_cryptogram"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/cryptogram_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/cryptogram_array" />
            </TableRow>
        </LinearLayout>

        <include layout="@layout/category_divider" />
    </TableLayout>
</layout>
