<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            style="@style/control_title_text"
            android:text="@string/billing_address_controls" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/billing_address_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/billing_address" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_top"
            android:background="@drawable/rectangle_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:text="@string/return_billing_validation" />

            <Spinner
                android:id="@+id/return_billing_address_error_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/return_billing_address_error_type" />

            <EditText
                android:id="@+id/custom_error_message_for_billing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_error_message_for_billing"
                android:visibility="gone" />

        </LinearLayout>

        <include layout="@layout/category_divider" />
    </TableLayout>
</layout>